browse/static/browse/scss/base.scss
@import "lumx/dist/scss/lumx";
@import "settings";

/* Base materials for site layout */
$site-background-color: #eeeeee;
$site-banner-color: #0277bd;
$highlight: #f49832;



/* End base materials */

// Finds the IDs of the buttons and set it as the site color
#siteButton {
  background-color: $site-banner-color;
}

#popup {
  background-color: $site-banner-color;
}

/* Begin voting classes */
.card-color {
    background-color: #ffffff;
}

.background-color {
    background-color: $site-background-color;
}

.index_layout {
    float: left;
    width: 50%;
}

.index_layout-mobile {
    float:bottom;
    width: 100%;
}

.small_logo {
    width: 50px;
    height: 70px;
    margin-top: -10px;
    margin-right: 40px;
}

.logo {
    width:300px;
    height: 300px;
    display: block;
    margin: 0 auto;
}

.vote-button {
  @extend .btn;
  @extend .btn--blue;
  @extend .btn--l;
  @extend .btn--flat;
}

.vote-button-up {
  @extend .vote-button;
}

.vote-button-down {
  @extend .vote-button;
}

.vote-button-icon {
  @extend .icon;
  @extend .icon--l;
  @extend .icon--blue;
  @extend .icon--flat;
  @extend .mdi;
}

.vote-button-up-icon {
  @extend .vote-button-icon;
  @extend .mdi-chevron-up;
}

.vote-button-down-icon {
  @extend .vote-button-icon;
  @extend .mdi-chevron-down;
}

.vote-button-active {
  @extend .bgc-grey-300;
}
/* End Voting Classes */


/* Main Page Classes */
.title-block {
  @extend .fs-display-4;
  @extend .display-block;
  @extend .tc-black-1;
  text-align: center;
}

.mobile-title-block {
  @extend .fs-display-3;
  @extend .display-block;
  @extend .tc-black-1;
}

.subtitle-block {
  @extend .fs-display-1;
  @extend .display-block;
  @extend .tc-black-1;
  text-align: right;
}

.sweaters-error {
  @extend .tc-black-1;
  @extend .p+;
  @extend .error !optional;
  @extend .bgc-red-500;
}

.latest-block {
  h2 {
    @extend .tc-black-1;
    @extend .p+;
    text-align: left;
  }

  display: block;
  padding-bottom: 25px;
}

/* Body and html should span whole page
 * https://www.kirupa.com/html5/make_body_take_up_full_browser_height.htm
 */
html {
  height: 100%;
}

body {
  height: 100%;
  font-family: Roboto, Helvetica, Neue, Sans-Serif !important;
}

.header-button {
  margin-top: 5px;
  display: inline-block;
}

.toolbar {
  position: relative;
  padding-top: 30px;
  margin-top: -20px;
  margin-right: 20px;
}

.o-wrapper {
  padding-top: 10px;
}

.top-bar {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 80px;
  z-index: 0;
  float: top;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,.68);
  background-color: $site-banner-color;
}
/* End Main Page Classes */

/* Supporting classes */


/* School / Professor Page Classes */
.padded-card {
  @extend .card;
  @extend .tc-black-1;

  padding: 5px;
  position: relative;
  margin-top: 15px;

  .information {
    display: inline-block;
    width: 80%;
    z-index: 3;

    .name {
      @extend .tc-black-1;
      @extend .fs-headline;

      display: inline-block;
      position: relative;
      left: -5%;
    }

    /* Fields which, at the bottom of a card, give statistics. */
    .card-stats {
      display: block;
      text-align: right;
      margin-top: 10px;

      .item {
        display: inline-block;
        width: 75px;
        line-height: 17px;
        text-align: center;
      }

      .location {
        display: inline-block;
        text-align: left;
        position: relative;
      }
    }
  }

  .rating {
    display: inline-block;
    text-align: center;
    position: relative;
    top: 50%;
    transform: translateY(-35%);
    z-index: 2;

  }
}

.review-rating {
  margin-right: 10px;

  display: inline-block;

  .average {
    width: 50px;
    line-height: 50px;
  }
}

.average {
  @extend .tc-black-1;
  @extend .fs-display-2;

  display: inline-block;
  width: 60px;
}

.out-of {
  color: $grey-500;

  display: inline-block;
}

.sub-rating {
  @extend .tc-black-1;
  @extend .fs-display-1;

  display: inline-block;
  width: 45px;
  line-height: 50px;
}

.rating-title {
  color: $grey-500;
}

.pagination-buttons {
  margin-bottom: 20px;
}


/* End School / Professor Page Classes */

/* All pages. A hyperlink class for nested cards in tabs. */
.hyperlink {
  color: #28aadc;
}

.hyperlink:hover {
  text-decoration: underline;
  cursor: pointer;
}

/* For professor / school view, the error about no x found for this y. */
.no-items {
  padding-bottom: 50px;
  padding-top: 20px;
}

/* The outer edit icon container and the icon proper */
.edit-icon-outer {
  z-index: 20;
  float: right;
}

.edit-icon {
  color: grey;
}

/* Text highlighting for the site */
/*** Works on common browsers ***/
::selection { background-color: $highlight; }
/*** Mozilla based browsers ***/
::-moz-selection { background-color: $highlight; }
/***For Other Browsers ***/
::-o-selection { background-color: $highlight; }
::-ms-selection { background-color: $highlight; }
/*** For Webkit ***/
::-webkit-selection { background-color: $highlight; }

